--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 .DS_Store
-node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+/evsd_svelte/node-modules
+/evsd_svelte/.eslint*
+/evsd_svelte/.npmrc
+/evsd_svelte/package*
+/evsd_svelte/.svelte-kit
+/evsd_svelte/.vite*
 venv
