--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"eslint": "^8.28.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"svelte": "^4.0.5",
+		"svelte-headless-table": "^0.18.2",
 		"vite": "^4.4.2"
 	},
 	"type": "module"
